# skill-sync

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  components.json  eslint.config.js  index.html  knip.json  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/plans/: bulk-actions-conflict-delete.md  establish-baseline-on-bind.md  first-run-intro-dialog.md  release-v0.0.1.md  rust-feature-module-refactor.md  shadcn-svelte-adoption.md  ssh-setup-guide.md  ui-refactor.md  verbose-ui-split.md
.github/workflows/: release.yml
.husky/: pre-commit
docs/: development-plan.md  distributed-execution.md  github-app-setup.md  github-base-refactor-design.md  logging-design.md  ssh-setup.md  svelte-ui-refactor.md  ui-refactor.md
docs/plans/: 2026-07-14-code-review.md  2026-07-14-delete-recovery-design.md  2026-07-14-github-star-growth-design.md  2026-07-14-passive-github-growth.md  2026-07-14-readme-screenshots-design.md  2026-07-14-readme-screenshots-v0.1.3.md  2026-07-15-create-github-vault-repository-design.md  2026-07-15-create-github-vault-repository.md  2026-07-15-create-private-github-vault-design.md  2026-07-15-create-private-github-vault.md  2026-07-15-resolve-review-open-questions.md  2026-07-16-architecture-code-review.md  2026-07-18-readme-tutorial-images-design.md  2026-07-18-readme-tutorial-images.md  code-review.md
docs/superpowers/plans/: 2026-07-07-github-vault-refactor.md  2026-07-11-knip-review.md  2026-07-12-logging-system.md  2026-07-12-sync-recovery-journal-fix.md  2026-07-13-readme-refresh.md
docs/superpowers/specs/: 2026-07-11-knip-review-design.md  2026-07-12-sync-recovery-journal-fix-design.md  2026-07-13-readme-refresh-design.md
scripts/: check-color-tokens.mjs  check-i18n-literals.mjs  check-responsive-layout.mjs  resolveSourceLintTargets.mjs  rust-fmt-staged.mjs  setup-husky.mjs
src/: App.tsx  app.d.ts  app.html  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  config.rs  detect.rs  errors.rs  git_store.rs  github.rs  github_app_config.rs  github_auth.rs  github_credentials.rs  github_repository.rs  github_store.rs  ignore.rs  lib.rs  local_apply.rs  local_vault_store.rs  logging.rs  main.rs  manifest.rs  pack.rs  portable_path.rs  remote_store.rs  skill.rs  sync_engine.rs  sync_state.rs  vault_binding.rs  vault_manifest.rs
src-tauri/src/commands/: github.rs  mod.rs  sync.rs  system.rs
src-tauri/src/github/: auth.rs  credentials.rs  repository.rs  store.rs
src-tauri/src/sync_engine/: apply.rs  model.rs  plan.rs  vault.rs
src-tauri/tests/fixtures/: config-v1.yaml
src/app/layouts/: AppLayout.svelte  AppLayout.tsx
src/app/providers/: AppProviders.tsx  QueryProvider.svelte
src/app/router/: AppRouter.tsx  routeConfig.ts  routeConfig.tsx
src/modules/backups/: index.ts
src/modules/backups/api/: backupsApi.ts
src/modules/conflicts/: index.ts
src/modules/dashboard/: index.ts
src/modules/demo-dashboard/: index.ts
src/modules/onboarding/: index.ts
src/modules/settings/: index.ts
src/modules/skills/: index.ts
src/modules/sync/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/shared/i18n/: i18next.d.ts  index.ts  language.ts
src/shared/lib/: appState.ts  eventBus.ts  index.ts  introSeen.ts  scanSkills.ts  tauri.ts  utils.ts  workspace.ts
src/shared/schemas/: apiResponse.ts  index.ts  scan.ts
src/shared/state/: index.ts  language.svelte.ts  theme.svelte.ts  ui.svelte.ts
src/shared/stores/: index.ts  languageStore.ts  themeStore.ts  uiStore.ts
src/shared/theme/: ThemeSync.svelte  ThemeSync.tsx  index.ts
src/shared/ui/: Badge.svelte  Button.svelte  Card.svelte  CardBody.svelte  CardHeader.svelte  Checkbox.svelte  EmptyState.svelte  Input.svelte  PathPicker.svelte  Spinner.svelte  StatusBadge.svelte  Textarea.svelte  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  empty-state.tsx  index.ts  input.tsx  path-picker.tsx  spinner.tsx  status-badge.tsx  textarea.tsx
(+109 files in other folders)
