[package]
name = "skill-sync"
version = "0.1.0"
description = "Sync agent skills across machines"
authors = ["Skill Sync"]
edition = "2021"
rust-version = "1.88"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "deny"
unused_must_use = "deny"
dead_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
let_underscore_must_use = "deny"
todo = "deny"
unimplemented = "deny"

[lib]
name = "skill_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
