[package]
name = "skill-sync"
version = "0.1.0"
description = "Sync agent skills across machines"
authors = ["Skill Sync"]
edition = "2021"
rust-version = "1.88"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "deny"
unused_must_use = "deny"
# dead_code 不在此 deny：partial commit 不应被死代码阻断；
# 改由 `npm run rust:clippy`（-D warnings）手动扫描死代码

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
let_underscore_must_use = "deny"
todo = "deny"
unimplemented = "deny"

[lib]
name = "skill_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "=2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
secrecy = "0.10"
unicode-normalization = "0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
flate2 = "1"
crc32fast = "1"
